# idea-agda-plugin

./: README.md
grammar/: grammar.bnf
haskell/: .project  Main.hs  Protocol.hs  SExpr.hs  agda-interface.cabal
parserTests/: Level.agda  Level.txt  Nat.agda  Nat.txt
src/org/agda/: AgdaFileImpl.java  AgdaFileType.java  AgdaFileTypeFactory.java  AgdaFileViewProviderFactory.java  AgdaLanguage.java  AgdaViewProvider.java  CodeAutoReplaceComponent.java  TestAgdaCommunication.java  TestGhci.java
src/org/agda/actions/: LoadCode.java
src/org/agda/compiler/: AgdaCompiler.java  AgdaCompilerProjectComponent.java
src/org/agda/completion/: AgdaCompletionContributor.java
src/org/agda/findUssages/: AgdaFindUsagesProvider.java  AgdaWordsScanner.java
src/org/agda/ghci/: AgdaCompilerMessage.java  AgdaExernalAnnotation.java  AgdaExternalAnnotation.java  AgdaProcess.java  AgdaProjectComponent.java  AgdaSyntaxAnnotation.java  AnnotationContainer.java  GHCIProcess.java  GhciProjectComponent.java  GoalAnnotation.java  LaunchAgda.java
src/org/agda/highlight/: AgdaAnnotator.java  AgdaBraceMatcher.java  AgdaCompilerMessage.java  AgdaHighlighter.java  AgdaHighlighterFactory.java  AnnotationResult.java
src/org/agda/lisp/: LispParser.java  SExpression.java
src/org/agda/parser/: AgdaASTType.java  AgdaASTTypes.java  AgdaElementType.java  AgdaLexer.java  AgdaParser.java  AgdaParserDefinition.java  AgdaParsing.java  AgdaToken.java  AgdaTokenTypes.java
src/org/agda/psi/: AgdaASTWrapper.java  (+6 more)
test/: TestAgdaParser.java  TestLispParser.java
test/parser/test/: AgdaParsingTest.java
(+128 files in other folders)
